deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harness-ecommerce
  labels:
    name: harness-ecommerce
